# Huli

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.agents/skills/huli-workflow/: SKILL.md  SKILL.zh-CN.md
docs/agents/: build.md  codegraph.md  formatting.md  git.md  index.md  learning.md  vulkan.md
docs/agents/zh-CN/: build.md  codegraph.md  formatting.md  git.md  index.md  learning.md  vulkan.md
docs/tasks/: build-smoke.md  study-template.md
docs/tasks/zh-CN/: build-smoke.md  study-template.md
engine/src/: main.cpp
examples/example1/: CMakeLists.txt  main.cpp
examples/example1/resources/shaders/: test_2triangles.vert  triangle.frag  triangle.vert
src/render/: CMakeLists.txt  Camera.cpp  Camera.hpp  FPSCounter.hpp
src/vulkan/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandQueueManager.cpp  CommandQueueManager.hpp  Common.cpp  Common.hpp  Context.cpp  Context.hpp  DynamicRendering.cpp  DynamicRendering.hpp  Framebuffer.cpp  Framebuffer.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  ShaderModule.cpp  ShaderModule.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Utility.cpp  Utility.hpp  Vma.cpp
tools/: sync-agents.ps1
